src/z80asm/z80asm2/t/20-preproc/expected/defvars_22.txt
% z88dk-z80asm -v -dump-after-macro-expansion t/20-preproc//input/defvars_22.asm
Define constant: __CPU_ZILOG__ = 1
Define constant: __CPU_Z80__ = 1
Assembling t/20-preproc/input/defvars_22.asm...
t/20-preproc/input/defvars_22.asm:6:3: error: Unexpected token: "x"
    } x
      ^
# file: t/20-preproc/input/defvars_22.asm
EndOfLine	"\n"	7:1	
symbol	__CPU_Z80__	1	(defined at )
symbol	__CPU_ZILOG__	1	(defined at )
